--- a/deposit-stream/package.json
+++ b/deposit-stream/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "crypto-trading-platform-data-stream",
+    "name": "crypto-trading-platform-deposit-stream",
     "version": "0.0.0",
     "private": true,
     "scripts": {
@@ -7,13 +7,15 @@
         "build": "tsc --build"
     },
     "dependencies": {
-        "@aws-sdk/client-sns": "^3.21.0",
-        "axios": "^0.21.1",
-        "ws": "^7.5.3",
-        "web3": "^1.7.5",
         "@aws-sdk/client-dynamodb": "^3.25.0",
-        "@aws-sdk/lib-dynamodb": "^3.25.0"
-},
+        "@aws-sdk/client-sns": "^3.21.0",
+        "@aws-sdk/lib-dynamodb": "^3.25.0",
+        "axios": "^0.21.1",
+        "dotenv": "^16.0.3",
+        "ethereum-input-data-decoder": "^0.4.2",
+        "web3": "^1.7.5",
+        "ws": "^8.9.0"
+    },
     "devDependencies": {
         "@types/node": "^14.14.31",
         "@types/ws": "^7.4.6"
