--- a/handlers/package.json
+++ b/handlers/package.json
@@ -10,9 +10,15 @@
         "@aws-sdk/client-dynamodb": "^3.25.0",
         "@aws-sdk/client-sns": "^3.25.0",
         "@aws-sdk/lib-dynamodb": "^3.25.0",
+        "@solana/web3.js": "^1.66.1",
+        "@types/cjson": "^0.5.0",
         "aws-crt": "^1.13.3",
         "bcryptjs": "^2.4.3",
+        "bs58": "^5.0.0",
+        "cjson": "^0.5.0",
         "decimal.js": "^10.3.1",
+        "ethereumjs-common": "^1.5.2",
+        "ethereumjs-tx": "^2.1.2",
         "web3": "^1.7.5"
     },
     "devDependencies": {
