--- a/handlers/package.json
+++ b/handlers/package.json
@@ -19,6 +19,8 @@
         "decimal.js": "^10.3.1",
         "ethereumjs-common": "^1.5.2",
         "ethereumjs-tx": "^2.1.2",
+        "ethjs-unit": "^0.1.6",
+        "mysql2": "^2.3.3",
         "web3": "^1.7.5"
     },
     "devDependencies": {
