--- a/deposit-stream_origin/package.json
+++ b/deposit-stream_origin/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "crypto-trading-platform-data-stream",
+    "name": "crypto-trading-platform-deposit-stream",
     "version": "0.0.0",
     "private": true,
     "scripts": {
@@ -7,13 +7,19 @@
         "build": "tsc --build"
     },
     "dependencies": {
+        "@aws-sdk/client-dynamodb": "^3.25.0",
         "@aws-sdk/client-sns": "^3.21.0",
+        "@aws-sdk/lib-dynamodb": "^3.25.0",
+        "alchemy-sdk": "^2.1.1",
         "axios": "^0.21.1",
-        "ws": "^7.5.3"
+        "dotenv": "^16.0.3",
+        "ethereum-input-data-decoder": "^0.4.2",
+        "web3": "^1.7.5",
+        "ws": "^8.9.0"
     },
     "devDependencies": {
         "@types/node": "^14.14.31",
-        "@types/ws": "^8.5.3"
+        "@types/ws": "^7.4.6"
     },
     "engines": {
         "node": ">=16.13.0"
