--- a/handlers/package.json
+++ b/handlers/package.json
@@ -10,6 +10,7 @@
         "@aws-sdk/client-dynamodb": "^3.25.0",
         "@aws-sdk/client-sns": "^3.25.0",
         "@aws-sdk/lib-dynamodb": "^3.25.0",
+        "@lifi/sdk": "^1.7.0",
         "@solana/web3.js": "^1.66.1",
         "@types/cjson": "^0.5.0",
         "aws-crt": "^1.13.3",
